--- a/public/admin.html
+++ b/public/admin.html
@@ -498,6 +498,36 @@
       });
     }
 
+
+    async function addAdmin() {
+      try {
+        const username = document.getElementById('aUser').value.trim();
+        const password = document.getElementById('aPass').value.trim();
+        const role = document.getElementById('aRole').value || 'admin';
+        if (!username || !password) {
+          alert('Please enter a username and password.');
+          return;
+        }
+        const res = await fetch('/api/admins', setAuthHeaders({
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ username, password, role })
+        }));
+        if (res.ok) {
+          // Refresh table and clear inputs
+          await loadAdmins();
+          document.getElementById('aUser').value = '';
+          document.getElementById('aPass').value = '';
+        } else {
+          const err = await res.json().catch(() => ({ error: 'Failed to add admin' }));
+          alert(err.error || 'Failed to add admin');
+        }
+      } catch (e) {
+        console.error('addAdmin error', e);
+        alert('Failed to add admin');
+      }
+    }
+
     // Load kiosk tokens from the server and render into the table
     async function loadKioskTokens() {
       const tableBody = document.querySelector('#kioskTokensTable tbody');
